; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_datum.c_datumIsEqual.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_datum.c_datumIsEqual.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @datumIsEqual(i64 %0, i64 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  store i64 %0, i64* %6, align 8
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %15 = load i32, i32* %8, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %4
  %18 = load i64, i64* %6, align 8
  %19 = load i64, i64* %7, align 8
  %20 = icmp eq i64 %18, %19
  %21 = zext i1 %20 to i32
  store i32 %21, i32* %10, align 4
  br label %48

22:                                               ; preds = %4
  %23 = load i64, i64* %6, align 8
  %24 = load i32, i32* %8, align 4
  %25 = load i32, i32* %9, align 4
  %26 = call i64 @datumGetSize(i64 %23, i32 %24, i32 %25)
  store i64 %26, i64* %11, align 8
  %27 = load i64, i64* %7, align 8
  %28 = load i32, i32* %8, align 4
  %29 = load i32, i32* %9, align 4
  %30 = call i64 @datumGetSize(i64 %27, i32 %28, i32 %29)
  store i64 %30, i64* %12, align 8
  %31 = load i64, i64* %11, align 8
  %32 = load i64, i64* %12, align 8
  %33 = icmp ne i64 %31, %32
  br i1 %33, label %34, label %35

34:                                               ; preds = %22
  store i32 0, i32* %5, align 4
  br label %50

35:                                               ; preds = %22
  %36 = load i64, i64* %6, align 8
  %37 = call i64 @DatumGetPointer(i64 %36)
  %38 = inttoptr i64 %37 to i8*
  store i8* %38, i8** %13, align 8
  %39 = load i64, i64* %7, align 8
  %40 = call i64 @DatumGetPointer(i64 %39)
  %41 = inttoptr i64 %40 to i8*
  store i8* %41, i8** %14, align 8
  %42 = load i8*, i8** %13, align 8
  %43 = load i8*, i8** %14, align 8
  %44 = load i64, i64* %11, align 8
  %45 = call i64 @memcmp(i8* %42, i8* %43, i64 %44)
  %46 = icmp eq i64 %45, 0
  %47 = zext i1 %46 to i32
  store i32 %47, i32* %10, align 4
  br label %48

48:                                               ; preds = %35, %17
  %49 = load i32, i32* %10, align 4
  store i32 %49, i32* %5, align 4
  br label %50

50:                                               ; preds = %48, %34
  %51 = load i32, i32* %5, align 4
  ret i32 %51
}

declare dso_local i64 @datumGetSize(i64, i32, i32) #1

declare dso_local i64 @DatumGetPointer(i64) #1

declare dso_local i64 @memcmp(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
